public class BaseCharacter {
}
