public class Paragraph {
    private "0..1" Sentence : "root" "0..1" sentence : "root";
}
