public class Sentence {
    private "0..1" Word  : "root" "0..1" word  : "root";
}
