public class Text {
    private "0..1" Paragraph : "root" "0..1" paragraph : "root";
}
