public class Word {
    private "0..1" BaseCharacter  : "root" "0..1" basecharacter  : "root";
}
